# libcody

./: .gitignore  CMakeLists.txt  CODING.md  Contributors.md  Makefile.in  Makesub.in  README.md  basic.cc  buffer.cc  client.cc  cody-conf.h  cody.hh  config.h.in  config.m4  configure  configure.ac  connection.cc  dox.cfg.in  fatal.cc  gdbinit.in  internal.hh  joust  netclient.cc  netserver.cc  packet.cc  resolver.cc  server.cc
cmake/: libcody-config-ix.cmake
tests/: Makesub.in  jouster
tests/01-serialize/: client-1.cc  connect.cc  decoder.cc  encoder.cc  messages.cc  server-1.cc
tests/02-comms/: client-1.cc  pivot-1.cc  server-1.cc
